--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,10 @@
 banner:
   image:
     location: image/badRobot.jpg
-
 server:
   port: 8090
 logging.com.zy17:
   level: debug
-
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/jvm?characterEncoding=utf-8
@@ -17,3 +15,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+logging:
+  path: logdir
+debug: false
